# MA_test

./: DockerFile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/files/: models.py  router.py  schemas.py  services.py  tasks.py  utils.py
migrations/: env.py
migrations/versions/: 8fe6f2938cfb_added_initial_table.py
