[tool.poetry]
name = "ma-test"
version = "0.1.0"
description = ""
authors = ["Alangard <73427768+Alangard@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
alembic = "^1.13.2"
pydantic = "^2.8.2"
SQLAlchemy = "^2.0.32"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
aiofiles = "^24.1.0"
asyncio = "^3.4.3"
pytest = "^8.3.2"
aioboto3 = "^13.1.1"
python-multipart = "^0.0.9"
faststream = "^0.5.17"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
